--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -30,3 +30,10 @@ a.signup_button {margin-left:auto; margin-right:auto; display:block; text-align:
 /* Footer */
 footer {text-align: center; margin-top: 10px; width: 710px; margin-left: auto; margin-right: auto;}
 footer nav {float: none;}
+
+
+/* User show page */
+table.profile {width:100%; margin-bottom:0;}
+td.main {width:70%; padding:1em;}
+td.sidebar {width:30%; padding:1em; vertical-align:top; background:#ffc;}
+.profile img.gravatar {border: 1px solid #999; margin-bottom:-15px;}
