--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -48,3 +48,9 @@ div.field, div.actions {margin-bottom:10px;}
 #error_explanation h2 {text-align:left; font-weight:bold; padding:5px 5px 5px 15px; font-size:12px; margin:-7px; background-color:#c00;color:#fff;}
 #error_explanation p {color:#333; margin-bottom: 0; padding:5px;}
 #error_explanation ul li {font-size:12px; list-size: square;}
+
+/* User create errors */
+ul.users {margin-top:1em;}
+.users li {list-style:none;}
+
+
